<resources>
    <string name="app_name">SubscriptionTracker</string>
    <string name="title">Subscription</string>
    <string name="noItemText">No subscriptions yet</string>
    <string name="createTask">#ab6d6b</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="next_payment">Next Payment (dd/mm/yyyy)</string>
    <string name="cycle">cycle</string>
    <string name="amount">Amount</string>
    <string name="currency">Currency</string>
    <string name="payment_method">Payment Method</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="pause">Pause</string>
    <string name="remind_me">Remind me (1 h before, i day before)</string>
    <string name="save">Save</string>
    <string name="calendar_icon">Calendar</string>
    <string name="clock_icon">"Clock "</string>
    <string name="action_settings">action_settings</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="view_chart">View Chart</string>
    <string name="currencyEuro">€</string>
    <string name="help">Help</string>
</resources>