<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <EditText
        android:id="@+id/newName"
        android:layout_width="370dp"
        android:layout_height="45dp"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/name"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/newDesc"
        android:layout_width="370dp"
        android:layout_height="45dp"
        android:layout_marginTop="210dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/description"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/newCat"
        android:layout_width="370dp"
        android:layout_height="45dp"
        android:layout_marginTop="270dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/category"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/newPay"
        android:layout_width="370dp"
        android:layout_height="45dp"
        android:layout_marginTop="330dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/next_payment"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/newCycle"
        android:layout_width="370dp"
        android:layout_height="45dp"
        android:layout_marginTop="390dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/cycle"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/newAmount"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_marginTop="450dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/amount"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/newCurrency"
        android:layout_width="176dp"
        android:layout_height="42dp"
        android:layout_marginTop="450dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/currency"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/newPayMet"
        android:layout_width="370dp"
        android:layout_height="45dp"
        android:layout_marginTop="510dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/payment_method"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/newRemind"
        android:layout_width="370dp"
        android:layout_height="45dp"
        android:layout_marginTop="570dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/remind_me"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,LabelFor" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="652dp"
        android:text="@string/save"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

