<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBG"
    tools:context=".ui.main.MainFragment">

  <TextView
      android:id="@+id/emptyView"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="300dp"
      android:gravity="center"
      android:text="@string/noItemText"
      android:textAppearance="@style/TextAppearance.AppCompat.Display1"
      android:textColor="@color/titleWhite"
      android:textSize="18sp"
      android:visibility="gone"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recyclerView"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginStart="7dp"
      android:layout_marginTop="40dp"
      android:layout_marginEnd="7dp"
      android:layout_marginBottom="8dp"
      app:layout_constraintTop_toBottomOf="@+id/emptyView"
      app:layout_constraintBottom_toTopOf="@+id/linearLayout"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      tools:listitem="@layout/item" />

  <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/createTaskButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:layout_marginBottom="16dp"
      android:background="@color/colorPrimaryDark"
      android:clickable="true"
      android:contentDescription="@string/createTask"
      android:focusable="true"
      android:tint="@color/titleWhite"
      app:layout_constraintBottom_toTopOf="@+id/linearLayout"
      app:layout_constraintEnd_toEndOf="parent"
      app:srcCompat="@android:drawable/ic_input_add" />

  <LinearLayout
      android:id="@+id/linearLayout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="16dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

  <Button
      android:id="@+id/btn_view_chart"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/viewChartButton"
      android:textColor="@color/titleWhite"
      android:text="@string/view_chart" />
  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


